# HybridGuard

./: .gitignore  .replit  ANALYSIS.md  README.md  TESTING.md  VM_SETUP.md  main.py  pyproject.toml  replit.md
attached_assets/: Pasted-Here-are-optimized-prompts-for-the-coding-part-of-your-Hybrid-Intrusion-Detection-System-project--1760206385661_1760206385662.txt
docs/: DEVELOPMENT_WORKFLOW.md
logs/: alerts_export_20251011_224220.json
models/: README.md  isolation_forest_model.pkl  isolation_forest_model_scaler.pkl
scripts/: docker-traffic-test.sh
src/: __init__.py  alert_manager.py  anomaly_detector.py  config.py  data_loader.py  gui.py  model_trainer.py  packet_sniffer.py  signature_detector.py
tests/: __init__.py  replay_pcap.py  test_detection.py
