[project]
name = "hybridguard"
version = "1.0.0"
description = "Hybrid Intrusion Detection System: ML anomaly detection + signature-based rules"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scapy>=2.6.1",
    "scikit-learn>=1.7.2",
]

[project.scripts]
hybridguard = "main:main"
